# mempool

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.agents/: README.md
docs/: adaptive_memory.md  architecture.md  benchmark_strategy.md  current_status.md  data_feedback_strategy.md  measured_routing_data.md  project_thesis.md  trainable_orchestrator.md  training_framework_choice.md  worker_pool.md
external_repos/: README.md
literature/: README.md
tests/: test_acquisition_plan.py  test_acquisition_source.py  test_acquisition_to_50.py  test_adaptive_refresh.py  test_agentic_turn_substrate.py  test_analyze_bigcodebench_dependency_gaps.py  test_annotate_routing_dataset_weights.py  test_baseline_coordinator.py  test_benchmark_plan.py  test_bigcodebench_materializer.py  test_build_fallback_training_dataset.py  test_build_repeated_routing_dataset.py  test_build_routing_dataset.py  test_conditional_policy.py  test_evaluate_active_policy.py  test_evaluate_latency_calibrated_logits_router.py  test_evaluate_orchestrated_prompt_set.py  test_evaluate_router_regression_slices.py  test_fallback_head.py  test_filter_evaluable_tasks.py  test_filter_outcome_jsonl_by_tasks.py  test_filter_worker_pool.py  test_gate_operational_policy.py  test_latency_calibrated_router.py  test_latency_safe_head.py  test_latency_safe_probe.py  test_logits_router.py  test_merge_outcome_jsonl.py  test_merge_routing_datasets.py  test_milestone_audit.py  test_mine_historical_fallback_cases.py  test_mined_fallback_head.py  test_model_catalog.py  test_multi_head_orchestrator.py  test_outcome_audit.py  (+54 more)
(+1319 files in other folders)
