[project]
name = "mempool"
version = "0.1.0"
description = "Open research system for learned model orchestration."
requires-python = ">=3.11"
dependencies = []

[project.scripts]
mempool-demo = "mempool.demo:main"

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"
